--- a/public/view/partials/failure.html
+++ b/public/view/partials/failure.html
@@ -1,15 +1,20 @@
-<div class="red" style="height: 90vh">
-  <div class="row">
+<div class="red">
+  <div class="row fullheight valign-wrapper"  style="width: 100vw">
     <div class="col s12">
-      <h4 class="center-align">That is not an authenticated email! please try a different email or speak with an instructor</h4>
+      <div class="row">
+        <div class="col s6 offset-s3">
+          <h4 class="center-align whiteText">That is not an authenticated email! please try a different email or speak with an admin</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12">
+          <a href= "/auth/google" class="btn loginBtn col s4 offset-s4 container" type="button" name="button">
+            <img class="loginImg" src="public/assets/images/google_logo1600 (1).png" />
+            <span class="loginDivider">|</span>
+            <span>Sign in with Google</span>
+          </a>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="row" ng-hide="auth.loggedIn">
-    <a href= "/auth/google" class="btn loginBtn col s4 offset-s4 container" type="button" name="button">
-      <img class="loginImg" src="public/assets/images/google_logo1600 (1).png" />
-      <span class="loginDivider">|</span>
-      <span>Sign in with Google</span>
-    </a>
-
   </div>
 </div>
