--- a/public/view/parent.html
+++ b/public/view/parent.html
@@ -33,7 +33,7 @@
 <div id="keypad" class="modal">
   <div class="modal-container">
     <div id="phoneNumberModal" class="modal-content animate">
-      <span>PIN is: <input type="password" data-ng-model="pc.pinEntry"></span>
+      <span ><input type="password" data-ng-model="pc.pinEntry" style="font-size: 80px; text-align: center"></span>
       <bc-keypad
       bc-number-model="pc.pinEntry"
       bc-max-length="4"
