--- a/public/view/partials/failure.html
+++ b/public/view/partials/failure.html
@@ -1,9 +1,9 @@
-<div class="red">
+<div ng-init="auth.error()">
   <div class="row fullheight valign-wrapper"  style="width: 100vw">
     <div class="col s12">
       <div class="row">
         <div class="col s6 offset-s3">
-          <h4 class="center-align whiteText">That is not an authenticated email! please try a different email or speak with an admin</h4>
+          <h4 class="center-align">That is not an authenticated email! please try a different email or speak with an admin</h4>
         </div>
       </div>
       <div class="row">
