edit and add user name, swal alerts

--- a/public/view/parentQuestions/4-pinSystem.html
+++ b/public/view/parentQuestions/4-pinSystem.html
@@ -51,7 +51,7 @@
 <div id="keypad" class="modal">
   <div class="modal-container">
     <div id="phoneNumberModal" class="modal-content animate">
-      <span>PIN is: <input type="password" data-ng-model="pc.pinEntry"></span>
+      <input type="password" data-ng-model="pc.pinEntry" style="font-size: 80px; text-align: center">
       <bc-keypad
       bc-number-model="pc.pinEntry"
       bc-max-length="4"
