student stats work

--- a/public/view/partials/stats.html
+++ b/public/view/partials/stats.html
@@ -5,11 +5,11 @@
       <canvas id="attend" class="chart chart-doughnut" chart-data="sc.attendDataArr" chart-labels="sc.attendLabelArr"></canvas>
     </div>
     <div class="col s4">
-      <!-- <h4>Today's attendance</h4>
-      <canvas id="today" class="chart chart-doughnut" chart-data="sc.attendDataArr" chart-labels="sc.attendLabelArr"></canvas> -->
+      <h5>Today's attendance</h5>
+      <canvas id="today" class="chart chart-doughnut" chart-data="sc.inNowDataArr" chart-labels="sc.inNowLabelArr"></canvas>
     </div>
     <div class="col s4">
-      <h5>number of people using pin</h5>
+      <h5>Number of people using Pin</h5>
       <canvas id="pin" class="chart chart-doughnut" chart-data="sc.pinDataArr" chart-labels="sc.pinLabelArr"></canvas>
     </div>
   </div>
