--- a/public/styles/sass/_generalStyles.scss
+++ b/public/styles/sass/_generalStyles.scss
@@ -1,5 +1,5 @@
 html {
-  background-image: url("../assets/images/abstract.jpg");
+  background-image: url("../../assets/images/abstract.jpg");
 }
 
 .marginBottom {
