--- a/public/view/index.html
+++ b/public/view/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/public/vendors/angular-keypad.min.css">
   <link rel="stylesheet" href="/public/vendors/xeditable.min.css">
   <link rel="stylesheet" href="/public/vendors/sweetalert2.min.css">
-  <link rel="stylesheet" href="/public/styles/main.min.css">
+  <link rel="stylesheet" href="/public/styles/sass/main.min.css">
 
   <!-- Vendors -->
   <script src="/public/vendors/jquery-3.2.1.min.js" charset="utf-8"></script>
