--- a/public/styles/sass/_generalStyles.scss
+++ b/public/styles/sass/_generalStyles.scss
@@ -1,5 +1,5 @@
 html {
-  background-image: url("../assets/images/abstract.jpg");
+  background-image: url("../../assets/images/abstract.jpg");
 }
 
 .marginBottom {
@@ -137,10 +137,4 @@ td {
 #emergency {
   min-width: 10vw;
   max-width: 39vw;
-}
-
-// sweetalerts
-
-.swal2-title, .swal2-content {
-  font-family: "Roboto", sans-serif;
 }
