--- a/public/view/parentQuestions/1-emergencyContact.html
+++ b/public/view/parentQuestions/1-emergencyContact.html
@@ -1,8 +1,8 @@
 <div class="">
   <div class="row fullheight container">
     <div class="col s12 center-align" ng-init="pc.loadEmergencyInfo()">
-      <h3 class="whiteText">Emergency Contact Info</h3>
-      <h5 class="whiteText">Please review this information and click to make any changes.</h5>
+      <h3 class="">Emergency Contact Info</h3>
+      <h5 class="">Please review this information and click to make any changes.</h5>
     </div>
     <div class="col s12">
       <div class="card background">
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="col s12">
-      <h5 class="center-align whiteText">When information is correct, press Continue.</h5>
+      <h5 class="center-align">When information is correct, press Continue.</h5>
     </div>
     <div class="col s12 center-align">
       <a class="parentBtn" href ng-click='pc.emergencySubmit()' type="button" name="button"><span>Continue</span></a>
