--- a/public/view/partials/stats.html
+++ b/public/view/partials/stats.html
@@ -1,23 +1,33 @@
 <div class="container">
   <div class="row">
     <div class="col s12">
-      <h5 class="center-align">Current Number of Students by Class</h5>
-      <canvas id="attend" class="chart chart-bar" chart-data="sc.attendDataArr" chart-labels="sc.attendLabelArr" chart-options="sc.attendOptions"></canvas>
-    </div>
-    <div class="row">
-
-
-    <div class="col s4">
-      <h5>Today's Attendance</h5>
-      <canvas id="today" class="chart chart-doughnut" chart-data="sc.inNowDataArr" chart-labels="sc.inNowLabelArr"></canvas>
-    </div>
-    <div class="col s4">
-
-    </div>
-    <div class="col s4">
-      <h5>Pin Users</h5>
-      <canvas id="pin" class="chart chart-doughnut" chart-data="sc.pinDataArr" chart-labels="sc.pinLabelArr"></canvas>
-    </div>
+      <div class="card">
+        <span class="card-title">Current Number of Students by Class</span>
+        <div class="card-content">
+          <canvas id="attend" class="chart chart-bar" chart-data="sc.attendDataArr" chart-labels="sc.attendLabelArr" chart-options="sc.attendOptions"></canvas>
+        </div>
       </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col s5">
+      <div class="card">
+        <span class="card-title">Today's Attendance</span>
+        <div class="card-content">
+          <canvas id="today" class="chart chart-doughnut" chart-data="sc.inNowDataArr" chart-labels="sc.inNowLabelArr"></canvas>
+        </div>
+      </div>
+    </div>
+    <div class="col s2">
+
+    </div>
+    <div class="col s5">
+      <div class="card">
+        <span class="card-title">Pin Users</span>
+        <div class="card-content">
+          <canvas id="pin" class="chart chart-doughnut" chart-data="sc.pinDataArr" chart-labels="sc.pinLabelArr"></canvas>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
