minor edit tweak

--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -182,7 +182,7 @@
         </div> -->
         <div class="col s12 center-align">
           <a class="waves-effect waves-light btn" ng-click='cc.saveEdit()' message="Edit Saved" duration="1500" toast='click'>Save Changes</a>
-          <a class="waves-effect cancel waves-light btn" onclick="document.getElementById('editClass').style.display = 'none'" message="Edit Canceled" duration="1500" toast='click'>Cancel</a>
+          <a class="waves-effect cancel waves-light btn" ng-click="cc.cancelEdit()" message="Edit Canceled" duration="1500" toast='click'>Cancel</a>
         </div>
       </div>
     </div>
