--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -44,7 +44,7 @@
             </button>
           </td>
           <td>
-            <button class="btn" ng-click="cc.removeClass(x._id)">
+            <button class="btn cancel" ng-click="cc.removeClass(x._id)">
               <i class="small material-icons">delete</i>
             </button>
           </td>
