--- a/public/view/parentQuestions/1-emergencyContact.html
+++ b/public/view/parentQuestions/1-emergencyContact.html
@@ -21,7 +21,7 @@
       <h5 class="center-align">When information is correct, press Continue.</h5>
     </div>
     <div class="col s12 center-align">
-      <a class="parentBtn" href ng-click='pc.emergencySubmit()' type="button" name="button"><span>Continue</span></a>
+      <button class="waves-effect waves-light btn checkInBtn" ng-click='pc.emergencySubmit()' type="button" name="button">Continue</button>
       <!-- <a class="parentBtn" href ng-click='pc.emergencyAlert()' type="button" name="button"><span>No</span></a> -->
     </div>
   </div>
