--- a/public/view/parentQuestions/2-selfCheckout.html
+++ b/public/view/parentQuestions/2-selfCheckout.html
@@ -6,8 +6,8 @@
           <h3>Will your child be checking themself out today?</h3>
         </div>
         <div class="col s12 center-align">
-          <a class="parentBtn" href ng-click='pc.selfCheckout(true)' type="button" name="button"><span>Yes</span></a>
-          <a class="parentBtn" href ng-click='pc.selfCheckout(false)' type="button" name="button"><span>No</span></a>
+          <button class="waves-effect waves-light btn checkInBtn"  ng-click='pc.selfCheckout(true)' type="button" name="button"><span>Yes</span></button>
+          <button class="waves-effect waves-light btn checkInBtn"  ng-click='pc.selfCheckout(false)' type="button" name="button"><span>No</span></button>
         </div>
         <div class="col s3">
           <span class="disabled"><h4>< Prev</h4></span>
