--- a/public/view/parentQuestions/3-receiveTexts.html
+++ b/public/view/parentQuestions/3-receiveTexts.html
@@ -6,8 +6,8 @@
           <h3>Would you like to receive texts when your child has been checked out?</h3>
         </div>
         <div class="col s12 center-align">
-          <a class="parentBtn" href ng-click='pc.receiveTexts(true)' type="button" name="button"><span>Yes</span></a>
-          <a class="parentBtn" href ng-click='pc.receiveTexts(false)' type="button" name="button"><span>No</span></a>
+          <button class="waves-effect waves-light btn checkInBtn" ng-click='pc.receiveTexts(true)' type="button" name="button"><span>Yes</span></button>
+          <button class="waves-effect waves-light btn checkInBtn" ng-click='pc.receiveTexts(false)' type="button" name="button"><span>No</span></button>
         </div>
         <div class="col s3">
           <a href="#!pinSystem"><h4>< Prev</h4></a>
