button fix and back to check in button

--- a/public/view/parentQuestions/4-pinSystem.html
+++ b/public/view/parentQuestions/4-pinSystem.html
@@ -29,7 +29,7 @@
         </div>
         <div class="col s12 center-align">
           <button class="waves-effect waves-light btn checkInBtn" ng-click='pc.usePin(false)' type="button" name="button"><span>Accept</span></button>
-          <a class="waves-effect waves-light btn checkInBtn valign-wrapper" href="#!selfCheckout"  type="button" name="button"><span>Go back</span></a>
+          <a href="#!selfCheckout"><button class="waves-effect waves-light btn checkInBtn valign-wrapper" type="button" name="button"><span>Go back</span></button></a>
         </div>
         <div class="col s3">
           <a href="#!selfCheckout"><h4>< Prev</h4></a>
