--- a/public/view/index.html
+++ b/public/view/index.html
@@ -111,7 +111,10 @@
 
     <nav class="z-depth-2" id="parentNav" ng-hide="ic.notParentView">
       <div class="nav-wrapper row">
-        <div class="col s10">
+        <div class="col s2 headCol valign-wrapper">
+          <a href="#!parent"><span class="header">Back To Check-In</span></a>
+        </div>
+        <div class="col s8">
 
         </div>
         <div class="col s1 headCol valign-wrapper">
