--- a/public/view/partials/studentDashboard.html
+++ b/public/view/partials/studentDashboard.html
@@ -25,7 +25,7 @@
     </ul>
     </div>
   </div>
-</div>
+<div class="row">
   <div class="col s12">
     <table>
       <tr>
@@ -61,6 +61,7 @@
       </tr>
     </table>
   </div>
+</div>
     <!-- addStudent Modal -->
     <div id="addStudent" class="modal">
       <div class="modal-content animate">
