--- a/public/view/parentQuestions/2-selfCheckout.html
+++ b/public/view/parentQuestions/2-selfCheckout.html
@@ -3,7 +3,7 @@
     <div class="card col s10 offset-s1 background">
       <div class="row">
         <div class="col s12 center-align">
-          <h3>Will your child be checking themself out today?</h3>
+          <h3>Will the student check themself out of class today?</h3>
         </div>
         <div class="col s12 center-align">
           <button class="waves-effect waves-light btn checkInBtn"  ng-click='pc.selfCheckout(true)' type="button" name="button"><span>Yes</span></button>
