--- a/public/view/parentQuestions/3-receiveTexts.html
+++ b/public/view/parentQuestions/3-receiveTexts.html
@@ -3,7 +3,7 @@
     <div class="card col s10 offset-s1 background">
       <div class="row">
         <div class="col s12 center-align">
-          <h3>Would you like to receive texts when your child has been checked out?</h3>
+          <h3>Would you like to receive texts when the student has been checked out?</h3>
         </div>
         <div class="col s12 center-align">
           <button class="waves-effect waves-light btn checkInBtn" ng-click='pc.receiveTexts(true)' type="button" name="button"><span>Yes</span></button>
