--- a/public/view/index.html
+++ b/public/view/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8">
+<!-- favicon -->
+  <link rel="icon" href="/public/favicon.ico" />
   <!-- Stylesheets -->
   <link rel="stylesheet" href="/public/vendors/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -70,16 +72,16 @@
     </nav>
     <!-- end topNav -->
 
-      <!-- start sideNav -->
-      <ul id="nav" class="side-nav">
+    <!-- start sideNav -->
+    <ul id="nav" class="side-nav">
 
-        <li class="bold"><a href="#!classes" class="waves-effect waves"><span class="menuItem">Classes Dashboard</span></a></li>
+      <li class="bold"><a href="#!classes" class="waves-effect waves"><span class="menuItem">Classes Dashboard</span></a></li>
 
-        <li class="bold"><a href="#!instructor" ng-click='' class="waves-effect waves-grey"><span class="menuItem">Instructor Dashboard</span></a></li>
+      <li class="bold"><a href="#!instructor" ng-click='' class="waves-effect waves-grey"><span class="menuItem">Instructor Dashboard</span></a></li>
 
-        <li class="bold"><a href="#!stats" class="waves-effect waves"><span class="menuItem">Statistics</span></a></li>
+      <li class="bold"><a href="#!stats" class="waves-effect waves"><span class="menuItem">Statistics</span></a></li>
 
-        <!-- <li tooltipped ng-show="ic.classSub" class="disabled" data-position="right" data-delay="100" data-tooltip="Please select class from dashboard to view this dropdown">
+      <!-- <li tooltipped ng-show="ic.classSub" class="disabled" data-position="right" data-delay="100" data-tooltip="Please select class from dashboard to view this dropdown">
           <span>Class options</span>
         </li>
 
@@ -96,15 +98,15 @@
             </li>
           </ul>
         </li> -->
-        <li class="bold"><a href="#!" ng-click="ic.logout()" class="waves-effect waves-grey"><span class="menuItem">Logout</span></a></li>
-        <li>
-          <div class="row">
-            <div class="col s6 offset-s3">
-              <img class="sideNav-logo" src="/public/assets/images/abamath.png" alt="">
-            </div>
+      <li class="bold"><a href="#!" ng-click="ic.logout()" class="waves-effect waves-grey"><span class="menuItem">Logout</span></a></li>
+      <li>
+        <div class="row">
+          <div class="col s6 offset-s3">
+            <img class="sideNav-logo" src="/public/assets/images/abamath.png" alt="">
           </div>
-        </li>
-      </ul>
+        </div>
+      </li>
+    </ul>
 
     <!-- end sideNav -->
 
