--- a/public/view/partials/studentDashboard.html
+++ b/public/view/partials/studentDashboard.html
@@ -159,8 +159,7 @@
           <h5>Emergency Contact: {{sc.emergencyName1}}</h5>
           <h5>Phone Number: {{sc.emergencyPhone1 | tel}}</h5>
           <h5>Relation: {{sc.emergencyRelation1}}</h5>
-          <button onclick="document.getElementById('showEmergency').style.display = 'none'; document.getElementById('editStudent').style.display = 'block'" class='btn' type="button" name="button">Update Information</button>
-          <button class="btn cancel" onclick="document.getElementById('showEmergency').style.display = 'none'">cancel</button>
+          <button class="btn cancel" onclick="document.getElementById('showEmergency').style.display = 'none'">close</button>
         </div>
       </div>
     </div>
