--- a/public/view/parent.html
+++ b/public/view/parent.html
@@ -35,6 +35,7 @@
 <div id="keypad" class="modal">
   <div class="modal-container">
     <div id="phoneNumberModal" class="modal-content animate">
+      <h5 class="center-align">Please Enter Your PIN</h5>
       <span ><input type="password" data-ng-model="pc.pinEntry" style="font-size: 80px; text-align: center"></span>
       <bc-keypad
       bc-number-model="pc.pinEntry"
@@ -45,7 +46,7 @@
       ></bc-keypad>
       <div class="row">
         <div class="col s12 center-align">
-          <button class='btn cancel marginTop' ng-click='pc.keypadClose()' type="button" name="button"><i class="material-icons large">cancel</i></button>
+          <button class='btn cancel marginTop2' ng-click='pc.keypadClose()' type="button" name="button"><i class="material-icons large">cancel</i></button>
         </div>
       </div>
     </div>
