--- a/public/view/parentQuestions/4-pinSystem.html
+++ b/public/view/parentQuestions/4-pinSystem.html
@@ -51,6 +51,7 @@
 <div id="keypad" class="modal">
   <div class="modal-container">
     <div id="phoneNumberModal" class="modal-content animate">
+      <h5 class="center-align">Please Enter A PIN</h5>
       <input type="password" data-ng-model="pc.pinEntry" style="font-size: 80px; text-align: center">
       <bc-keypad
       bc-number-model="pc.pinEntry"
@@ -61,7 +62,7 @@
       ></bc-keypad>
       <div class="row">
         <div class="col s12 center-align">
-          <button class='btn cancel marginTop' ng-click='pc.keypadClose()' type="button" name="button"><i class="material-icons large">cancel</i></button>
+          <button class='btn cancel marginTop2' ng-click='pc.keypadClose()' type="button" name="button"><i class="material-icons large">cancel</i></button>
         </div>
       </div>
     </div>
